--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -207,11 +207,11 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-        - path: /.well-known/acme-challenge/
+        - path: /.well-known/acme-challenge
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver-tt7nw # Ensure this service is the correct one
+              name: cm-acme-http-solver # Ensure this service is the correct one
               port:
                 number: 8089
 #        - path: /
