--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -21,8 +21,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: fineract-server-src
-  name: fineract-server-src
+    app: fineract-server-srv
+  name: fineract-server-srv
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
@@ -32,11 +32,11 @@ spec:
       port: {{ .Values.fineract.env.CONTAINER_PORT }}
       targetPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
       nodePort: 30944
-    - name: 80-8089
-      protocol: TCP
-      port: 80
-      targetPort: 8089
-      nodePort: 30748
+#    - name: 80-8089
+#      protocol: TCP
+#      port: 80
+#      targetPort: 80
+#      nodePort: 30748
   selector:
     app: fineract-server
     tier: backend
@@ -225,7 +225,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: fineract-server-src
+              name: fineract-server-srv
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
   tls:
