--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -31,7 +31,7 @@ spec:
       protocol: TCP
       port: {{ .Values.fineract.env.CONTAINER_PORT }}
       targetPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
-      nodePort: 30944
+#      nodePort: 30944
 #    - name: 80-8089
 #      protocol: TCP
 #      port: 80
