--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -307,23 +307,23 @@ subsets:
     ports:
       - port: 3306
 
-#---
-#apiVersion: cert-manager.io/v1
-#kind: ClusterIssuer
-#metadata:
-#  name: letsencrypt-dev
-#spec:
-#  acme:
-##    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
-#    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
-#    email: alex@vuna.io  # Replace with your email
-#    privateKeySecretRef:
-#      name: letsencrypt-dev
-#    solvers:
-#      - http01:
-#          ingress:
-#            class: nginx  # Ensure this matches your Ingress class
-#
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-dev
+spec:
+  acme:
+#    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
+    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
+    email: alex@vuna.io  # Replace with your email
+    privateKeySecretRef:
+      name: letsencrypt-dev
+    solvers:
+      - http01:
+          ingress:
+            class: nginx  # Ensure this matches your Ingress class
+
 #---
 #apiVersion: cert-manager.io/v1
 #kind: Certificate
