--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -18,14 +18,14 @@ fineract:
     FINERACT_ADMIN_USERNAME: ""
     FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME: com.mysql.cj.jdbc.Driver
     FINERACT_HIKARI_JDBC_URL: ""
-    FINERACT_SERVER_PORT: 8080
+    FINERACT_SERVER_PORT: 443
     CONTAINER_PORT: 443
     FINERACT_NODE_ID: ""
     FINERACT_DEFAULT_TENANTDB_UID: ""
     FINERACT_DEFAULT_TENANTDB_CONN_PARAMS: ""
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
-    enabled: true
+    enabled: false
     hostname: api.vuna.io
     path: "/fineract-provider"
     annotations:
