--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -330,9 +330,9 @@ spring.cloud.aws.credentials.profile.path=${FINERACT_AWS_CREDENTIALS_PROFILE_PAT
 
 # FINERACT-914
 server.forward-headers-strategy=framework
-server.port=${FINERACT_SERVER_PORT:443}
+server.port=${FINERACT_SERVER_PORT:8080}
 server.servlet.context-path=${FINERACT_SERVER_SERVLET_CONTEXT_PATH:/fineract-provider}
-server.compression.enabled=${FINERACT_SERVER_COMPRESSION_ENABLED:true}
+server.compression.enabled=${FINERACT_SERVER_COMPRESSION_ENABLED:false}
 
 server.ssl.enabled=${FINERACT_SERVER_SSL_ENABLED:true}
 server.ssl.protocol=TLS
