--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -21,8 +21,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: fineract-server-srv
-  name: fineract-server-srv
+    app: fineract-server
+  name: fineract-server
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
@@ -225,7 +225,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: fineract-server-srv
+              name: fineract-server
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
 #  tls:
