--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -21,8 +21,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: fineract-server
-  name: fineract-server
+    app: fineract-svc
+  name: fineract-svc
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
