--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -214,20 +214,20 @@ spec:
 #              name: cm-acme-http-solver # Ensure this service is the correct one
 #              port:
 #                number: 8089
-#        - path: /
-#          pathType: Prefix
-#          backend:
-#            service:
-#              name: nginx-service  # Service for HTTP traffic
-#              port:
-#                number: 80
-        - path: "{{ .Values.fineract.ingress.path }}"
+        - path: /
           pathType: Prefix
           backend:
             service:
-              name: fineract-server
+              name: nginx-service  # Service for HTTP traffic
               port:
-                number: {{ .Values.fineract.env.CONTAINER_PORT }}
+                number: 80
+#        - path: "{{ .Values.fineract.ingress.path }}"
+#          pathType: Prefix
+#          backend:
+#            service:
+#              name: fineract-server
+#              port:
+#                number: {{ .Values.fineract.env.CONTAINER_PORT }}
   tls:
     - hosts:
       - api.vuna.io
