--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -293,26 +293,26 @@ subsets:
     ports:
       - port: 3306
 
-#---
-#apiVersion: cert-manager.io/v1
-#kind: ClusterIssuer
-#metadata:
-#  name: letsencrypt-issuer
-#spec:
-#  acme:
-#    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
-##    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
-#    email: alex@vuna.io  # Replace with your email
-#    privateKeySecretRef:
-#      name: letsencrypt-issuer-key
-#  dnsConfig:
-#    namecheap:
-#      apiKey: "6f5de4dd0e7d4064a25b2a156455811f"
-#      username: "kimaniderrick"
-#    solvers:
-#      - http01:
-#          ingress:
-#            class: nginx  # Ensure this matches your Ingress class
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-issuer
+spec:
+  acme:
+    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
+#    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
+    email: alex@vuna.io  # Replace with your email
+    privateKeySecretRef:
+      name: letsencrypt-issuer-key
+  dnsConfig:
+    namecheap:
+      apiKey: "6f5de4dd0e7d4064a25b2a156455811f"
+      username: "kimaniderrick"
+    solvers:
+      - http01:
+          ingress:
+            class: nginx  # Ensure this matches your Ingress class
 #
 #---
 #apiVersion: cert-manager.io/v1
