--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -20,9 +20,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: fineract-server
   name: fineract-server
+  labels:
+    app.kubernetes.io/name: fineract-server
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
 spec:
@@ -38,8 +38,8 @@ spec:
 #      targetPort: 80
 #      nodePort: 30748
   selector:
-    app: fineract-server
-    tier: backend
+    app.kubernetes.io/name: fineract-server
+#    tier: backend
   type: NodePort
 #  loadBalancerIP: 140.238.98.195
 ---
@@ -48,19 +48,19 @@ kind: Deployment
 metadata:
   name: fineract-server
   labels:
-    app: fineract-server
+    app.kubernetes.io/name: fineract-server
 spec:
   selector:
     matchLabels:
-      app: fineract-server
-      tier: backend
+      app.kubernetes.io/name: fineract-server
+#      tier: backend
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: fineract-server
-        tier: backend
+        app.kubernetes.io/name: fineract-server
+#        tier: backend
     spec:
       containers:
         - name: fineract-server
@@ -128,9 +128,9 @@ spec:
               value: 'true'
             - name: "FINERACT_SECURITY_OAUTH_ENABLED"
               value: 'false'
-          ports:
-            - containerPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
-              name: fineract-server
+#          ports:
+#            - containerPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
+#              name: fineract-server
           lifecycle:
             preStop:
               exec:
