--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -20,7 +20,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fineract-server
+  name: fineract-svc
   labels:
     app.kubernetes.io/name: fineract-server
 #  annotations:
