--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -128,9 +128,9 @@ spec:
               value: 'true'
             - name: "FINERACT_SECURITY_OAUTH_ENABLED"
               value: 'false'
-          ports:
-            - containerPort: {{ .Values.fineract.env.CONTAINER_PORT }}
-              name: fineract-server
+#          ports:
+#            - containerPort: {{ .Values.fineract.env.CONTAINER_PORT }}
+#              name: fineract-server
           lifecycle:
             preStop:
               exec:
