--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -73,18 +73,18 @@ spec:
             requests:
               cpu: "{{ .Values.fineract.resources.requests.cpu }}"
               memory: "{{ .Values.fineract.resources.requests.memory }}"
-#          livenessProbe:
-#            httpGet:
-#              path: /fineract-provider/actuator/health/liveness
-#              port: 8443
-#            initialDelaySeconds: 720
-#            periodSeconds: 1
-#          readinessProbe:
-#            httpGet:
-#              path: /fineract-provider/actuator/health/readiness
-#              port: 8443
-#            initialDelaySeconds: 360
-#            periodSeconds: 1
+          livenessProbe:
+            httpGet:
+              path: /fineract-provider/actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 720
+            periodSeconds: 1
+          readinessProbe:
+            httpGet:
+              path: /fineract-provider/actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 360
+            periodSeconds: 1
           env:
 #            - name: FINERACT_SERVER_PORT
 #              value: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
