feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -202,7 +202,7 @@ metadata:
 {{ toYaml .Values.fineract.ingress.annotations | indent 4 }}
 {{- end }}
 spec:
-  ingressClassName: nginx
+#  ingressClassName: nginx
   rules:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
