feat: added cors entry

--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -30,9 +30,9 @@ fineract:
     path: "/fineract-provider"
     annotations:
       ingressClassName: nginx
-      cert-manager.io/cluster-issuer: "letsencrypt-dev"
-      acme.cert-manager.io/http01-edit-in-place: "true"
-      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
+#      cert-manager.io/cluster-issuer: "letsencrypt-dev"
+#      acme.cert-manager.io/http01-edit-in-place: "true"
+#      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
 #      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
 #      ingress.kubernetes.io/proxy-body-size: "0"
 #      ingress.kubernetes.io/ssl-redirect: "true"
