--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -221,10 +221,10 @@ spec:
               name: fineract-svc
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
-  tls:
-    - hosts:
-      - api.vuna.io
-      secretName: finercat-dev-tls-secret
+#  tls:
+#    - hosts:
+#      - api.vuna.io
+#      secretName: finercat-dev-tls-secret
 {{- end }}
 ---
 apiVersion: v1
@@ -300,41 +300,41 @@ subsets:
     ports:
       - port: 3306
 
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-issuer
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
-#    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
-    email: alex@vuna.io  # Replace with your email
-    privateKeySecretRef:
-      name: letsencrypt-issuer-key
-#  dnsConfig:
-#    namecheap:
-#      apiKey: "6f5de4dd0e7d4064a25b2a156455811f"
-#      username: "kimaniderrick"
-    solvers:
-      - http01:
-          ingress:
-            class: nginx  # Ensure this matches your Ingress class
-
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: fineract-cert
-  namespace: paymenthub-ns
-spec:
-  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
-  issuerRef:
-    name: letsencrypt-issuer  # Ensure this matches your ClusterIssuer name
-    kind: ClusterIssuer
-  commonName: api.vuna.io
-  dnsNames:
-    - api.vuna.io
+#---
+#apiVersion: cert-manager.io/v1
+#kind: ClusterIssuer
+#metadata:
+#  name: letsencrypt-issuer
+#spec:
+#  acme:
+#    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
+##    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
+#    email: alex@vuna.io  # Replace with your email
+#    privateKeySecretRef:
+#      name: letsencrypt-issuer-key
+##  dnsConfig:
+##    namecheap:
+##      apiKey: "6f5de4dd0e7d4064a25b2a156455811f"
+##      username: "kimaniderrick"
+#    solvers:
+#      - http01:
+#          ingress:
+#            class: nginx  # Ensure this matches your Ingress class
+#
+#---
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: fineract-cert
+#  namespace: paymenthub-ns
+#spec:
+#  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
+#  issuerRef:
+#    name: letsencrypt-issuer  # Ensure this matches your ClusterIssuer name
+#    kind: ClusterIssuer
+#  commonName: api.vuna.io
+#  dnsNames:
+#    - api.vuna.io
 
 #---
 #apiVersion: networking.k8s.io/v1
