--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -289,7 +289,7 @@ management.health.readinessState.enabled=true
 
 management.health.ratelimiters.enabled=${FINERACT_MANAGEMENT_HEALTH_RATELIMITERS_ENABLED:false}
 
-management.endpoints.web.cors.allowed-origins=https://portal.vuna.io
+management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
 management.endpoints.web.cors.allowed-headers=*
 
