--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -289,9 +289,9 @@ management.health.readinessState.enabled=true
 
 management.health.ratelimiters.enabled=${FINERACT_MANAGEMENT_HEALTH_RATELIMITERS_ENABLED:false}
 
-management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-origins="https://portal.vuna.io,https://api.vuna.io,http://api.vuna.io"
 management.endpoints.web.cors.allowed-methods=GET, POST, PUT, DELETE, OPTIONS
-management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.allowed-headers="https://portal.vuna.io,https://api.vuna.io,http://api.vuna.io"
 
 # FINERACT-883
 management.info.git.mode=FULL
