refactor: added server connection timeout

--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -333,6 +333,7 @@ server.forward-headers-strategy=framework
 server.port=${FINERACT_SERVER_PORT:8080}
 server.servlet.context-path=${FINERACT_SERVER_SERVLET_CONTEXT_PATH:/fineract-provider}
 server.compression.enabled=${FINERACT_SERVER_COMPRESSION_ENABLED:true}
+server.connection-timeout=5000
 
 server.ssl.enabled=${FINERACT_SERVER_SSL_ENABLED:false}
 server.ssl.protocol=TLS
@@ -352,6 +353,7 @@ server.tomcat.max-http-form-post-size=${FINERACT_SERVER_TOMCAT_MAX_HTTP_FORM_POS
 server.tomcat.max-keep-alive-requests=${FINERACT_SERVER_TOMCAT_MAX_KEEP_ALIVE_REQUESTS:100}
 server.tomcat.threads.max=${FINERACT_SERVER_TOMCAT_THREADS_MAX:200}
 server.tomcat.threads.min-spare=${FINERACT_SERVER_TOMCAT_THREADS_MIN_SPARE:10}
+server.tomcat.connection-timeout=5000
 
 # OAuth authorisation server endpoint
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${FINERACT_SERVER_OAUTH_RESOURCE_URL:http://localhost:9000/auth/realms/fineract}
