refactor: added certificate

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -321,20 +321,20 @@ spec:
           ingress:
             class: nginx  # Ensure this matches your Ingress class
 
-#---
-#apiVersion: cert-manager.io/v1
-#kind: Certificate
-#metadata:
-#  name: fineract-cert
-#  namespace: paymenthub-ns
-#spec:
-#  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
-#  issuerRef:
-#    name: letsencrypt-issuer  # Ensure this matches your ClusterIssuer name
-#    kind: ClusterIssuer
-#  commonName: api.vuna.io
-#  dnsNames:
-#    - api.vuna.io
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: fineract-cert
+  namespace: paymenthub-ns
+spec:
+  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
+  issuerRef:
+    name: letsencrypt-issuer  # Ensure this matches your ClusterIssuer name
+    kind: ClusterIssuer
+  commonName: api.vuna.io
+  dnsNames:
+    - api.vuna.io
 
 #---
 #apiVersion: networking.k8s.io/v1
