--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -362,10 +362,12 @@ spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_N
 spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL}
 spring.datasource.hikari.username=${FINERACT_HIKARI_USERNAME}
 spring.datasource.hikari.password=${FINERACT_HIKARI_PASSWORD}
-spring.datasource.hikari.minimumIdle=${FINERACT_HIKARI_MINIMUM_IDLE:3}
+spring.datasource.hikari.minimumIdle=${FINERACT_HIKARI_MINIMUM_IDLE:5}
 spring.datasource.hikari.maximumPoolSize=${FINERACT_HIKARI_MAXIMUM_POOL_SIZE:10}
-spring.datasource.hikari.idleTimeout=${FINERACT_HIKARI_IDLE_TIMEOUT:60000}
+spring.datasource.hikari.idleTimeout=${FINERACT_HIKARI_IDLE_TIMEOUT:300000}
+spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connectionTimeout=${FINERACT_HIKARI_CONNECTION_TIMEOUT:20000}
+spring.datasource.hikari.validation-timeout=5000
 spring.datasource.hikari.connectionTestquery=${FINERACT_HIKARI_TEST_QUERY:SELECT 1}
 spring.datasource.hikari.autoCommit=${FINERACT_HIKARI_AUTO_COMMIT:true}
 spring.datasource.hikari.transactionIsolation=${FINERACT_HIKARI_TRANSACTION_ISOLATION:TRANSACTION_REPEATABLE_READ}
@@ -383,7 +385,21 @@ spring.datasource.hikari.dataSourceProperties['maintainTimeStats']=${FINERACT_HI
 # TODO FINERACT-890: <prop key="logger">com.mysql.cj.log.Slf4JLogger</prop>
 spring.datasource.hikari.dataSourceProperties['logSlowQueries']=${FINERACT_HIKARI_DS_PROPERTIES_LOG_SLOW_QUERIES:true}
 spring.datasource.hikari.dataSourceProperties['dumpQueriesOnException']=${FINERACT_HIKARI_DS_PROPERTIES_DUMP_QUERIES_IN_EXCEPTION:true}
+
+# Connection leak detection
+spring.datasource.hikari.leak-detection-threshold=60000
+# Keep the connection alive
+spring.datasource.hikari.keepalive-time=240000     # 4 minutes
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+# Pool maintenance
+spring.datasource.hikari.register-mbeans=true
+spring.datasource.hikari.allow-pool-suspension=false
+
 spring.jpa.open-in-view=false
+
+
+
 
 # Liquibase configuration
 spring.liquibase.enabled=${FINERACT_LIQUIBASE_ENABLED:true}
