fix: keepalive config error

--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -389,7 +389,7 @@ spring.datasource.hikari.dataSourceProperties['dumpQueriesOnException']=${FINERA
 # Connection leak detection
 spring.datasource.hikari.leak-detection-threshold=60000
 # Keep the connection alive
-spring.datasource.hikari.keepalive-time=240000     # 4 minutes
+spring.datasource.hikari.keepalive-time=240000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
 # Pool maintenance
@@ -397,9 +397,6 @@ spring.datasource.hikari.register-mbeans=true
 spring.datasource.hikari.allow-pool-suspension=false
 
 spring.jpa.open-in-view=false
-
-
-
 
 # Liquibase configuration
 spring.liquibase.enabled=${FINERACT_LIQUIBASE_ENABLED:true}
