--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,7 @@ buildscript {
     }
     repositories {
         maven { url 'https://plugins.gradle.org/m2/' }
-        maven { url 'https://mifos.jfrog.io/artifactory/libs-snapshot-local/'}
+        maven { url 'https://mifos.jfrog.io/artifactory/mifos/'}
     }
 
     dependencies {
@@ -84,6 +84,7 @@ buildscript {
         classpath 'org.apache.commons:commons-lang3:3.17.0'
         classpath 'io.swagger.core.v3:swagger-jaxrs2-jakarta:2.2.22'
         classpath 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+        classpath 'community.mifos:pentaho-plugin:1.10.0-SNAPSHOT'
     }
 }
 
