fix: pentaho plugin build error

--- a/build.gradle
+++ b/build.gradle
@@ -597,6 +597,8 @@ configure(project.fineractJavaProjects) {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
+        implementation 'org.pentaho.reporting.engine:classic-core:9.4.0.0'
+        
         testImplementation( 'org.mockito:mockito-core',
                 'org.mockito:mockito-junit-jupiter',
                 'org.junit.jupiter:junit-jupiter-api',
