fix: build error

--- a/fineract-provider/dependencies.gradle
+++ b/fineract-provider/dependencies.gradle
@@ -200,7 +200,7 @@ dependencies {
 
     implementation 'io.github.classgraph:classgraph'
     
-    implementation 'org.pentaho.reporting.engine:classic-core:9.4.0.0'
+    implementation 'org.pentaho.reporting.engine:classic-core'
 	
     // testCompile dependencies are ONLY used in src/test, not src/main.
     // Do NOT repeat dependencies which are ALREADY in implementation or runtimeOnly!
