--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -66,11 +66,17 @@ jobs:
           DOSN: ${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}
           IMAGE: ${{ env.IMAGE }}
 
-        # Push the Docker image to OCI Container Registry
-      - name: 'Publish'
+#        # Push the Docker image to OCI Container Registry
+#      - name: 'Publish'
+#        run: |-
+#          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:$GITHUB_SHA"
+#          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest"
+      # Push the Docker image to GitHub Container Registry
+      - name: 'Publish to GitHub Container Registry'
         run: |-
-          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:$GITHUB_SHA"
-          docker push "${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest"
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker push "ghcr.io/${{ github.repository }}/$IMAGE:$GITHUB_SHA"
+          docker push "ghcr.io/${{ github.repository }}/$IMAGE:latest"
 
         # Deploy the Docker image to the GKE cluster
       - name: 'Deploy to K8S'
@@ -89,7 +95,7 @@ jobs:
           helm upgrade cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.12.0 --set installCRDs=true
           
           helm upgrade \
-          --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
+          --set fineract.image="ghcr.io/${{ github.repository }}/$IMAGE:latest" \
           --set fineract.env.FINERACT_SERVER_PORT=${{ secrets.FINERACT_SERVER_PORT }} \
           --set fineract.env.FINERACT_NODE_ID="${{ secrets.FINERACT_NODE_ID }}" \
           --set fineract.env.FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME="${{ secrets.FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME }}" \
