--- a/fineract-provider/build.gradle
+++ b/fineract-provider/build.gradle
@@ -267,7 +267,7 @@ jib {
     to {
         //image = 'almbolonzi/ekesha-fineract'
 //	image = "${System.getenv('GAR_LOCATION')}-docker.pkg.dev/${System.getenv('PROJECT_ID')}/${System.getenv('REPOSITORY')}/${System.getenv('IMAGE')}".toString()
-        image = "ghcr.io/${System.getenv('DOSN')}/${System.getenv('IMAGE')}".toString()
+        image = "ghcr.io/${System.getenv('REPO')}/${System.getenv('IMAGE')}".toString()
         tags = [
             "${project.version}",
             "${versionTag}",
@@ -293,8 +293,8 @@ jib {
            'GITHUB_SHA' : "${System.getenv('GITHUB_SHA')}".toString(),
            'GITHUB_REF' : "${System.getenv('GITHUB_REF')}".toString(),
            'DOCKER_URL' : "${System.getenv('DOCKER_URL')}".toString(),
-	       'DOSN' : "${System.getenv('DOSN')}".toString(),
-//	       'REPOSITORY' : "${System.getenv('REPOSITORY')}".toString(),
+//	       'DOSN' : "${System.getenv('DOSN')}".toString(),
+	       'REPO' : "${System.getenv('REPO')}".toString(),
 	       'IMAGE' : "${System.getenv('IMAGE')}".toString()
         ]
     }
